--- a/Auswertung.tex
+++ b/Auswertung.tex
@@ -14,7 +14,11 @@
 \usepackage{pdfpages}
 \usepackage{multirow}
 \usepackage{rotating}
-\usepackage[bottom =10mm]{geometry}
+\usepackage[top=22mm,bottom =22mm]{geometry}
+
+%\usepackage{scrlayer-scrpage}
+%\pagestyle{scrheadings}
+%\ofoot{\pagemark}
 
 \begin{document}
 \begin{titlepage}
