--- a/AuswertungNachtrag.tex
+++ b/AuswertungNachtrag.tex
@@ -49,12 +49,12 @@
             
     \end{center}
 \end{titlepage}
-
+\section*{Nachtrag zu 2.3 - Interesse an Mathe und Informatik}
 \begin{figure}[h]
 \begin{center}
-      \includegraphics[scale=0.7]{interesse_mathe0_barplot}
+      \includegraphics[scale=0.6]{interesse_mathe0_barplot}
       \caption{Interesse an Mathe}
-	\includegraphics[scale=0.7]{interesse_info0_barplot}
+	\includegraphics[scale=0.6]{interesse_info0_barplot}
 	\caption{Interesse an Info}
 \end{center}
 \end{figure}
